--- a/Mod 7/styles_players.css
+++ b/Mod 7/styles_players.css
@@ -40,3 +40,23 @@ h1{
     border: 5px solid black;
     border-radius: 5px;
 }
+
+.to_add_player {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    background-color: #013369;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    margin:1rem;
+}
+
+
+.to_add_player_div{
+    text-align: center;
+    margin: 2rem auto;
+}
+
+.to_add_player:hover {
+    color: #8eb6cd;
+}
