--- a/Mod 9/styles_players.css
+++ b/Mod 9/styles_players.css
@@ -80,6 +80,8 @@ h1{
     justify-content: center;
     align-items: center;
     z-index: 2; /*had to look this up because the div was overlaying over top of it */
+    overflow-y: auto;
+    padding:2rem;
 }
 
 .team_content {
@@ -90,9 +92,16 @@ h1{
     border: 4px solid #222;
     border-radius: 25px;
     padding: 2rem 3rem;
-    max-width: 1500px;
-    margin: 3rem auto;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); 
+    max-width: 900px;
+    margin: 0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    width: 100%; 
+    max-height: 90vh; 
+    overflow-y: auto;  
 }
 
 .team_content h2 {
